Fix gallery overflow bug on homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ p {
 /* welcome section */
 
 .welcome-container {
-    height: 700px;
+    height: 800px;
     width: 100%;
     background-color: #111;
 }
@@ -676,6 +676,13 @@ button {
 }
 */
 
+@media screen and (max-width: 1900px) {
+    .gallery-image {
+        height: 220px;
+        width: 220px;
+    }
+
+
 @media screen and (max-width: 1385px) {
     #menu-nav {
         font-size: 90%;
@@ -711,7 +718,7 @@ button {
     }
 
     .welcome-container {
-        height: 120%;
+        height: 110%;
     }
 
     .welcome-col {
@@ -733,9 +740,13 @@ button {
         height: 466.67px;
     }
 
+    .gallery-col {
+        margin-left: 1%;
+    }
+
     #reasons-section {
         width: 100%;
-        height: 110%;
+        height: 100%;
         margin: 0 auto;
     }
 
@@ -833,11 +844,6 @@ button {
         padding: 0;
     }
 
-    .gallery-col img {
-        height: 140px;
-        width: 140px;
-    }
-
     #reasons-section {
         width: 100%;
         margin: 0 auto;
@@ -919,7 +925,16 @@ button {
         border-right: none;
     }
 
+    .welcome-container {
+        height: 120%;
+    }
+
     .welcome-col {
+        margin: 0 auto;
+    }
+
+    .find-out-activities {
+        width: 50%;
         margin: 0 auto;
     }
 
